add BattleLine and fix ControlBoard

--- a/LittleWarGame.cbp
+++ b/LittleWarGame.cbp
@@ -35,6 +35,7 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/Arrow.h" />
+		<Unit filename="include/BattleLine.h" />
 		<Unit filename="include/Castle.h" />
 		<Unit filename="include/Point.h" />
 		<Unit filename="include/Sword.h" />
@@ -42,6 +43,7 @@
 		<Unit filename="include/Warriors.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Arrow.cpp" />
+		<Unit filename="src/BattleLine.cpp" />
 		<Unit filename="src/Castle.cpp" />
 		<Unit filename="src/Point.cpp" />
 		<Unit filename="src/Sword.cpp" />
